Corrected some z-indexing issues

--- a/css/farfalla.css
+++ b/css/farfalla.css
@@ -9,7 +9,7 @@
   -moz-box-shadow: -1px 2px 3px #999;
   box-shadow: -1px 2px 3px #999;
 */
-  z-index: 10000;
+  z-index: 100000;
   background: #000;
   border-left: 2px solid #fff;
   border-top: 2px solid #fff;
